package com.github.freeman.bootcamp.videocall
import androidx.compose.foundation.layout.*
import androidx.compose.material.Button
import androidx.compose.material.MaterialTheme
import androidx.compose.material.Text
import androidx.compose.material.TextField
import androidx.compose.runtime.Composable
import androidx.compose.runtime.LaunchedEffect
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.unit.dp
import com.github.freeman.bootcamp.videocall.VideoCallActivity.Companion.ENTER_ROOM_NAME
import com.github.freeman.bootcamp.videocall.VideoCallActivity.Companion.JOIN_ROOM
import kotlinx.coroutines.flow.collectLatest

/**
 * allows to enter a video call room by entering a number in a textField and by clicking on a button
 *
 * @param onNavigate the navigation flow controller
 * @param viewModel view model for RoomScreen display
 */
@Composable
fun RoomScreen(
    onNavigate: (String) -> Unit,
    viewModel: RoomViewModel = androidx.lifecycle.viewmodel.compose.viewModel()
) {
    LaunchedEffect(key1 = true) {
        viewModel.onJoinEvent.collectLatest { name ->
            onNavigate("video_screen/$name")
        }
    }
    Column(
        modifier = Modifier.fillMaxSize(),
        verticalArrangement = Arrangement.Center,
        horizontalAlignment = Alignment.End
    ) {
        TextField(
            value = viewModel.roomName.value.text,
            onValueChange = viewModel::onRoomEnter,
            modifier = Modifier.fillMaxWidth().testTag("room_screen_text_field"),
            isError = viewModel.roomName.value.error != null,
            placeholder = {
                Text(text = ENTER_ROOM_NAME)
            }
        )
        viewModel.roomName.value.error?.let {
            Text(text = it, color = MaterialTheme.colors.error,
                modifier = Modifier.testTag("room_screen_error_field"))
        }
        Spacer(modifier = Modifier.height(8.dp))
        Button(onClick = viewModel::onJoinRoom,
            modifier = Modifier.fillMaxWidth().testTag("room_screen_button")) {
            Text(text = JOIN_ROOM)
        }
    }
}