...
            modifier = Modifier.padding(10.dp),
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.Center
        ) {
            GreetingInput(msg)
            IconButton(
                modifier = Modifier.testTag("submitWordButton"),
                onClick = {
                    val tx = msg.text.lowercase().replace("\\s".toRegex(), "")
                    if (submit(tx)) {
                        keyboardController?.hide()
                        msg.text = ""
                    }
...
